--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 .sidebar {
   position: fixed;
-  top: 0;
+  top: 48px;
   /* rtl:raw:
     right: 0;
     */
@@ -40,7 +40,7 @@ body {
   left: 0;
   z-index: 100;
   /* Behind the navbar */
-  padding: 48px 0 0;
+  padding: 0px 0 0;
   /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
@@ -97,6 +97,7 @@ body {
    */
 
 .navbar-brand {
+  padding-left: .2rem;
   padding-top: .75rem;
   padding-bottom: .75rem;
   font-size: 1rem;
